Cleaned up swagger docs
