# modules/inventory/config/swagger.json
@@ -54,407 +54,22 @@
                         "description": "Internal server error"
                     }
                 }
-            },
-            "options": {
-                "tags": [
-                    "Inventory - Mobile"
-                ],
-                "summary": "Federated Inventory commercial CORS pre-flight",
-                "description": "",
-                "operationId": "corsPreFlight",
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "Origin",
-                        "in": "header",
-                        "required": false,
-                        "type": "string",
-                        "items": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "Success",
-                        "schema": {
-                            "$ref": "#/definitions/InventoryResponse"
-                        }
-                    }
-                }
             }
         }
     },
     "definitions": {
-        "InventoryRequest": {
-            "type": "object",
-            "required": [
-                "Password",
-                "Username"
-            ],
-            "properties": {
-                "Username": {
-                    "type": "string"
-                },
-                "Password": {
-                    "type": "string"
-                },
-                "ReferringPartner": {
-                    "type": "string",
-                    "enum": [
-                        "TWC",
-                        "BH",
-                        "CHARTER"
-                    ]
-                },
-                "Zipcode": {
-                    "type": "string"
-                },
-                "AttemptNumber": {
-                    "type": "integer",
-                    "format": "int32",
-                    "default": 1
-                },
-                "PastAuthValues": {
-                    "type": "string"
-                },
-                "ForcePartner": {
-                    "type": "string",
-                    "enum": [
-                        "TWC",
-                        "BH",
-                        "CHARTER"
-                    ]
-                },
-                "KeepMeIn": {
-                    "type": "boolean",
-                    "default": false
-                },
-                "TargetURL": {
-                    "type": "string",
-                    "default": "/"
-                },
-                "g-captcha-response": {
-                    "type": "string"
-                }
-            }
-        },
         "InventoryResponse": {
             "type": "object",
             "properties": {
-                "Status": {
-                    "type": "string",
-                    "enum": [
-                        "SUCCESS",
-                        "CUSTOMER_LOCKED",
-                        "INVALID_CREDENTIALS",
-                        "CHARTER_NAME_CONFLICT",
-                        "INVALID_PASSWORD_STRENGTH",
-                        "AMBIGUOUS_AUTH",
-                        "UNEXPECTED_ERROR",
-                        "BLACKLISTED_CREDS",
-                        "CAPTCHA_REQUIRED",
-                        "IP_LOCKED",
-                        "NOT_InventoryD"
-                    ]
-                },
-                "ErrorPage": {
+                "productID": {
                     "type": "string"
                 },
-                "Username": {
+                "merchant": {
                     "type": "string"
                 },
-                "PartnerType": {
-                    "type": "string",
-                    "enum": [
-                        "TWC",
-                        "BH",
-                        "CHARTER"
-                    ]
-                },
-                "AttemptNumber": {
+                "minimumInventory": {
                     "type": "integer",
                     "format": "int32"
-                },
-                "Action": {
-                    "type": "string",
-                    "enum": [
-                        "DISPLAY_RECOVERY_HINT",
-                        "L_IDP_REPLAY",
-                        "INITIATE_SPECNET_SESSION",
-                        "REDIRECT_TO_LEGACY_LOGIN"
-                    ]
-                },
-                "LCharterSession": {
-                    "$ref": "#/definitions/LCharterSession"
-                },
-                "errors": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/Error"
-                    }
-                },
-                "statusCode": {
-                    "type": "integer",
-                    "format": "int32"
-                },
-                "transactionId": {
-                    "type": "string"
-                },
-                "dateTime": {
-                    "type": "string",
-                    "format": "date-time"
-                }
-            }
-        },
-        "Error": {
-            "type": "object",
-            "required": [
-                "code",
-                "dateTime",
-                "messages"
-            ],
-            "properties": {
-                "code": {
-                    "type": "string",
-                    "enum": [
-                        "COMMUNICATION_ERROR",
-                        "UNKNOWN_ERROR",
-                        "REQUEST_INVALID",
-                        "UNSUPPORTED_REQUEST",
-                        "AUTH_TOKEN_NOT_FOUND",
-                        "AUTH_TOKEN_EXPIRED",
-                        "AUTH_TOKEN_INVALIDATED_BY_LOGOUT",
-                        "AUTH_LOGIN_FAILURE",
-                        "SERVICE_ERROR",
-                        "DATA_NOT_FOUND",
-                        "SERVICE_ACTION_FAILED",
-                        "VIDEO_SESSION_LIMIT_EXCEEDED",
-                        "ACCOUNT_NOT_ENTITLED",
-                        "DUPLICATE_WATCHLIST_ERROR",
-                        "ACCOUNT_STANDING_ERROR",
-                        "WHITE_LIST_ACCOUNT_NOT_FOUND_ERROR",
-                        "MINIMUM_SUBSCRIPTION_ERROR",
-                        "MAX_ATTEMPTS_LIMIT_EXCEEDED",
-                        "NOT_BEHIND_MODEM",
-                        "USER_NAME_NOT_AVAILABLE",
-                        "HOH_EMAIL_FOUND",
-                        "STB_IDENTIFIED_BY_MAC_NOT_FOUND",
-                        "STB_RESUME_REQUEST_TIMED_OUT",
-                        "STB_ACCOUNT_MISMATCH",
-                        "OPERATION_TIMED_OUT",
-                        "ERROR_SCHEDULING_DVR_RECORDING",
-                        "DVR_NOT_ENABLED_ON_STB",
-                        "ACG_INTERNAL_ERROR",
-                        "REInventory_REQUIRED",
-                        "MOUNTAIN_STATES_LOGIN_ERROR",
-                        "DEVICE_NOT_ENTITLED",
-                        "OUT_OF_REGION",
-                        "STREAM_NOT_ALLOWED_OFFNET",
-                        "PROVIDER_STREAM_LIMIT_EXCEEDED",
-                        "NON_ADMIN_ACTIVITY",
-                        "INVALID_ACCOUNT",
-                        "REQUEST_ACTION_FAILED",
-                        "ORDER_NOT_FOUND",
-                        "JOB_NOT_FOUND",
-                        "UNABLE_TO_GET_APPOINTMENTS",
-                        "UNABLE_TO_GET_SCHEDULES",
-                        "INSTALL_APPT_CANNOT_BE_CANCELED",
-                        "UNABLE_TO_CANCEL",
-                        "INVALID_CANCEL_TIME",
-                        "CANCEL_APPOINTMENT_ON_HOLD",
-                        "SCHEDULE_NOT_AVAILABLE",
-                        "UNABLE_TO_RESCHEDULE",
-                        "RESCHEDULE_ATTEMPTS_EXCEEDED",
-                        "INVALID_RESCHEDULE_TIME",
-                        "RESCHEDULE_APPOINTMENT_ON_HOLD",
-                        "AUTO_BILLPAY_EXCEPTION",
-                        "PAPERLESS_BILLING_EXCEPTION",
-                        "BILLING_PREFERENCE_REQUIRED",
-                        "UNABLE_TO_REMOVE_BILLING_EMAIL",
-                        "UNABLE_TO_REMOVE_BILLING_PHONE",
-                        "UNABLE_TO_REMOVE_BILLING_MOBILE"
-                    ]
-                },
-                "messages": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "transactionId": {
-                    "type": "string"
-                },
-                "dateTime": {
-                    "type": "string",
-                    "format": "date-time"
-                }
-            }
-        },
-        "FederatedResponse": {
-            "type": "object",
-            "required": [
-                "Code",
-                "Message"
-            ],
-            "properties": {
-                "Code": {
-                    "type": "string"
-                },
-                "Message": {
-                    "type": "string"
-                },
-                "Token": {
-                    "type": "string"
-                },
-                "WrappedResponse": {
-                    "type": "object"
-                },
-                "errors": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/Error"
-                    }
-                },
-                "statusCode": {
-                    "type": "integer",
-                    "format": "int32"
-                },
-                "transactionId": {
-                    "type": "string"
-                },
-                "dateTime": {
-                    "type": "string",
-                    "format": "date-time"
-                }
-            }
-        },
-        "LCharterSession": {
-            "type": "object",
-            "properties": {
-                "SessionId": {
-                    "type": "string"
-                },
-                "EncryptedSessionId": {
-                    "type": "string"
-                },
-                "PKey": {
-                    "type": "string"
-                },
-                "TargetURL": {
-                    "type": "string"
-                },
-                "KeepMeIn": {
-                    "type": "boolean",
-                    "default": false
-                }
-            }
-        },
-        "OptionalFederatedContext": {
-            "type": "object",
-            "properties": {
-                "present": {
-                    "type": "boolean",
-                    "default": false
-                }
-            }
-        },
-        "OptionalUserSessionV2": {
-            "type": "object",
-            "properties": {
-                "present": {
-                    "type": "boolean",
-                    "default": false
-                }
-            }
-        },
-        "PreAuthResponse": {
-            "type": "object",
-            "required": [
-                "ConfirmHumanity"
-            ],
-            "properties": {
-                "ConfirmHumanity": {
-                    "type": "boolean",
-                    "description": "Whether a CAPTCHA or similar challenge is required",
-                    "default": false
-                },
-                "CaptchaPublicKey": {
-                    "type": "string",
-                    "description": "The reCAPTCHA public API key if ConfirmHumanity is true, otherwise null"
-                }
-            }
-        },
-        "Response": {
-            "type": "object",
-            "properties": {
-                "metadata": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "array",
-                        "items": {
-                            "type": "object"
-                        }
-                    }
-                },
-                "entity": {
-                    "type": "object"
-                },
-                "status": {
-                    "type": "integer",
-                    "format": "int32"
-                }
-            }
-        },
-        "SBNET Inventory Request": {
-            "type": "object",
-            "properties": {
-                "Username": {
-                    "type": "string",
-                    "description": "The username to Inventory"
-                },
-                "Password": {
-                    "type": "string",
-                    "description": "The password to Inventory"
-                },
-                "AttemptNumber": {
-                    "type": "integer",
-                    "format": "int32",
-                    "description": "The current number of Inventory attempts.",
-                    "default": 1
-                },
-                "Zipcode": {
-                    "type": "string",
-                    "description": "The zipcode of the user to Inventory"
-                },
-                "PastAuthValues": {
-                    "type": "string",
-                    "description": "past Inventory values"
-                },
-                "CaptchaResponse": {
-                    "type": "string",
-                    "description": "captcha response"
-                },
-                "ForcePartner": {
-                    "type": "string",
-                    "description": "if specified, force Inventory against the given partner system.",
-                    "enum": [
-                        "TWC",
-                        "BH",
-                        "CHARTER"
-                    ]
-                },
-                "KeepMeIn": {
-                    "type": "boolean",
-                    "description": "If specified, keep the session open",
-                    "default": false
-                },
-                "TargetURL": {
-                    "type": "string",
-                    "description": "If specified, redirect to the given targetURL after successful Inventory",
-                    "default": "/"
                 }
             }
         }
